2008-10-21 George Sherwood <gsherwood@sourcemage.org>
	* bin-http/firefox-obstcp: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin-lang-es: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin-lang-fr: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin-lang-nl: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin-lang-pl: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin-lang-ru: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin-lang-sv: Moved spell to binary grimoire
	* bin-editors/openoffice2-bin: Moved spell to binary grimoire
	* bin-editors/openoffice3-bin: Moved spell to binary grimoire
	* bin-editors/openoffice-bin: Moved spell to binary grimoire
	* bin-http/firefox-bin: Moved spell to binary grimoire
	* bin-http/icecat-bin: Moved spell to binary grimoire
	* bin-http/netscape4: Moved spell to binary grimoire
	* bin-http/nspluginwrapper: Moved spell to binary grimoire
	* bin-http/seamonkey-bin: Moved spell to binary grimoire
	* bin-http/tomcat-4-bin: Moved spell to binary grimoire
	* bin-http/xulrunner-bin: Moved spell to binary grimoire
	* bin-audio/tuxguitar-bin: Moved spell to binary grimoire
	* bin-mail/thunderbird-bin: Moved spell to binary grimoire

2008-10-19 George Sherwood <gsherwood@sourcemage.org>
	* z-http/firefox-obstcp: Added new spell. Patched version of firefox

2008-10-09 Ladislav Hagara <hgr@vabo.cz>
	* z-x11/nvidia-settings: removed deprecated spell
	* z-kernels/nvidia_headers: removed deprecated spell

2008-10-08 Julien "_kaze_" ROZO <julien@rozo.org>
	* z-kernels/nvidia_legacy_173xx: new spell, last branch of nvidia
	  driver to support GeForceFX GPU

2008-09-09 Julien "_kaze_" ROZO <julien@rozo.org>
	* z-editors/openoffice3-bin: new spell, binary version of OpenOffice.org 3

2008-08-24 Remko van der Vossen <wich@sourcemage.org>
	* z-audio/mac: New spell, monkey's Audio Codec

2008-07-21 George Sherwood <george@beernabeer.com>