@@ -1,1 +1,0 @@
-source $GRIMOIRE/REJECTED_MSG
