@@ -1,14 +1,0 @@
-	    SPELL=eclipse-bin
-          VERSION=3.1
-           SOURCE=eclipse-SDK-${VERSION}-linux-gtk.tar.gz
- SOURCE_DIRECTORY=$BUILD_DIRECTORY/eclipse    
-SOURCE_URL[0]=ftp://mirrors.ibiblio.org/pub/mirrors/eclipse/eclipse/downloads/drops/R-${VERSION}-200506271435/$SOURCE
-        WEB_SITE=http://www.eclipse.org
-     SOURCE_HASH=sha512:ca148c8ccc80c781529a74f04e2d749ce25a0cbe7683631427c7f3da2a30922d10817eeaafde23a4beb031de424293514a7f8632ad6051a2449281e0503bf31a
-      LICENSE[0]=CPL
-      ENTERED=20041110
-	  REJECT="is non-source"
-      SHORT="An attempt to provide open platform for ide-style application development tools"
-cat << EOF
-The eclipse project for the development of software design tools was originally formed by Borland, IBM, MERANT, QNX Software Systems, Rational Software3, Red Hat, SuSE, TogetherSoft3 and Webgain2, and was later joined by other major companies.  The licensing scheme is intended to encourage the development of integrated third party software which may or may not be open source and/or free.  The program actually exists as a core (they call it a microkernel) with functionality added by pluggins.  It has support for several languages, including java and c++ and has extensions that allow UML round trip engineering.  It also is supposed to be able to use system development tools, like debuggers, compilers, tracers, etc.
-EOF
