@@ -1,8 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Name=Eclipse
-Exec=eclipse
-Icon=
-Terminal=false
-Type=Application
-Categories=Application;Development
