@@ -1,18 +1,0 @@
-2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
-	* DETAILS: [automated] Removed UPDATED.
-
-2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
-	* DETAILS: [automated] Removed BUILD_API=2.
-
-2005-12-01 Seth Woolley <seth@tautology.org>
-	* DETAILS: MD5 -> SHA512
-
-2005-07-20 George Sherwood <george@beernabeer.com>
-	* DETAILS: Updated to version 3.1. Shortened SHORT. 
-	  Update SOURCE_URL. Updated SOURCE.
-
-2005-03-30 Andrew Stitt <astitt@sourcemage.org>
-	* CONFIGURE: remove relative paths to grimoire libraries
-
-2004-11-10 Rafael George <rgeorge@yatusabes.com>
-	* Created spell
